--- a/functions/package.json
+++ b/functions/package.json
@@ -12,10 +12,12 @@
     "node": "8"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "firebase": "^7.1.0",
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "busboy": "^0.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "firebase": "^5.9.0",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.2.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
