--- a/functions/package.json
+++ b/functions/package.json
@@ -9,15 +9,16 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
     "busboy": "^0.3.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "firebase": "^5.9.0",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase": "^5.11.1",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
+    "latest-version": "^5.1.0"
   },
   "private": true
 }
